--- a/css/css-style.css
+++ b/css/css-style.css
@@ -1,11 +1,202 @@
 
 
 .navbar{
- background-color: blue !important;
- width: auto;
- height: 112px;
+  background-color: #023DB0 !important;
+  box-shadow: 0px -5px 20px #09378E; width: auto;
+  height: 112px;
 }
 
-.navbar-brand{
-margin-left: 140px;
+.navbar-nav > li{
+  margin-left:10px;
+  margin-right:10px;
+}
+
+.navbar-nav .nav-item a {
+  color: white !important;
+}
+
+.navbar .dropdown-menu a {
+  color: black !important
+}
+
+li {
+}
+
+.form-control {
+   border-radius: .90rem;
+   border: none;
+   height: 30px;
+}
+
+.nav-iten  .nav-link a {
+  text-decoration: none;
+}
+/* Drop Down Menu*/
+
+
+
+.dropdown-menu.columns-2 {
+	min-width: 350px;
+}
+
+.dropdown-menu li a {
+	padding: 5px 15px;
+	font-weight: 300;
+
+}
+.multi-column-dropdown {
+  list-style: none;
+  margin: none;
+  padding: 3px;
+}
+.multi-column-dropdown li a {
+	display: block;
+	clear: both;
+	white-space: pre;
+}
+.multi-column-dropdown li a:hover {
+	text-decoration: none;
+	color: #023DB0;
+  font-weight: 600;
+}
+
+#navbarDropdownMenuLink{
+  color: white;
+}
+
+@media (max-width: 767px) {
+ .dropdown-menu.multi-column {
+   min-width: 240px !important;
+   overflow-x: hidden;
+ }
+}
+
+
+
+
+.jumbotron {
+    display: flex;
+    align-items: center;
+    background-image: url('/Users/Senna/Desktop/warehouse/img/hero.png');
+    background-size: cover;
+    background-position: center;
+    top: auto;
+    color: #ffffff;
+    height: 500px;
+}
+
+
+
+h1 {
+  font-size: 76px;
+  font-family: "Source Sans Pro", Helvetica, sans-serif;
+  font-weight: 600;
+  text-transform: uppercase;
+   color: #fff;
+}
+
+h2 {
+	height: 40px;
+	width: 191px;
+	color: #0541A2;
+	font-family: "Source Sans Pro";
+	font-size: 40px;
+	font-weight: 900;
+	line-height: 50px;
+}
+
+
+
+h4 {
+	height: 19px;
+	width: 120px;
+	color: #4A4746;
+	font-family: "Source Sans Pro";
+	font-size: 19px;
+	line-height: 19px;
+	text-align: center;
+  margin-top: 10px;
+}
+
+  p {
+  height: 44px;
+  width: 372px;
+  color: #FFF;
+  font-family: "Source Sans Pro", Helvetica, sans-serif;
+  font-size: 35px;
+  line-height: 44px;
+}
+
+ #jumbo-btn {
+  border-radius: 30px;
+	height: 42px;
+	width: 141.5px;
+	background: linear-gradient(152.88deg, #42A9FF 0%, #1FBFFF 100%);
+	box-shadow: 0 1px 4px 0 rgba(0,0,0,0.53);
+  color: rgba(255,255,255, 0.9);
+  font-size: 18px;
+  text-align: center:
+}
+
+#login-btn {
+ border-radius: 30px;
+ height: 42px;
+ width: 141.5px;
+ background: linear-gradient(152.88deg, #42A9FF 0%, #1FBFFF 100%);
+ box-shadow: 0 1px 4px 0 rgba(0,0,0,0.53);
+ color: rgba(255,255,255, 0.9);
+ font-size: 16px;
+}
+
+
+#btn-nav {
+  border-radius: 30px;
+  font-weight: 600;
+  color: black;
+  box-sizing: border-box;
+  height: 42px;
+  width: 142px;
+  border: 0.5px solid rgba(255,255,255,0.2);
+  background-color: rgba(255,161,25,1);
+  background: linear-gradient(176.08deg, rgba(255,184,25,1) 0%, rgba(255,161,25,1) 100%);
+}
+
+
+#cart-btn{
+  margin-left: 15px;
+  border-radius: 30px;
+  height: 42px;
+  width: 42px;
+  background: linear-gradient(152.88deg, #42A9FF 0%, #1FBFFF 100%);
+  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.53);
+  color: rgba(255,255,255, 0.9);
+}
+
+#categories {
+  margin-left: 50px;
+}
+.cart-icon {
+  margin-top:  10px;
+  margin-left: 7px;
+
+  height: 60%;
+  width: 60%;
+}
+
+
+.card-title{
+  text-decoration: none !important;
+}
+.card {
+  border:0px;
+  justify-itens: space-between;
+  margin: 3px;
+}
+
+.card:hover{
+  border-radius:  15px;
+  box-shadow: 2px 2px 28px grey;
+  list-style: none;
+  padding-bottom: 
+
 }
