--- a/css/css-style.css
+++ b/css/css-style.css
@@ -107,6 +107,19 @@ h2 {
 
 
 
+h3 {
+	height: 19px;
+	width: 120px;
+	color: #4A4746;
+	font-family: "Source Sans Pro";
+	font-size: 19px;
+	line-height: 19px;
+	text-align: center;
+  margin-top: 10px;
+  white-space: nowrap
+}
+
+
 h4 {
 	height: 19px;
 	width: 120px;
@@ -175,6 +188,10 @@ h4 {
 #categories {
   margin-left: 50px;
 }
+
+#categories-td {
+left: 90px;
+}
 .cart-icon {
   margin-top:  10px;
   margin-left: 7px;
@@ -197,6 +214,159 @@ h4 {
   border-radius:  15px;
   box-shadow: 2px 2px 28px grey;
   list-style: none;
-  padding-bottom: 
+}
 
+
+/* todays deals slide horizontal */
+
+.td-deals h3 {
+  margin-left: 0px,
+}
+
+
+.scrolling-wrapper-flexbox {
+  margin-left: 240px;
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+}
+
+
+.card {
+    flex: 0 0 auto;
+  }
+
+
+  .scrolling-wrapper {
+  webkit-overflow-scrolling: touch;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+
+/* Recently Viwed h2 */
+.Recently-Viewed {
+margin-left: 150px;
+}
+
+
+/* Subscribe newsletter bar */
+
+.newsletter {
+    padding: 0px 0;
+    text-align: center;
+}
+
+
+.input-group {
+    margin: 20px auto;
+    width: 100%;
+}
+
+input.btn.btn-lg,
+input.btn.btn-lg:focus {
+    border-radius:  30px;
+    box-shadow: 2px 2px 28px grey;
+    outline: none;
+    width: 333px 66%;
+    height: 50px;
+    border-top-right-radius:   0;
+    border-bottom-right-radius: 0;
+}
+
+
+
+#btn-nav-newsletter {
+  margin-right: 50px;
+  border-radius:  30px;
+  width: 100px 33%;
+  height: 50px;
+  font-weight: 600;
+  color: black;
+  box-sizing: border-box;
+  border: 0.5px solid rgba(255,255,255,0.2);
+  background-color: rgba(255,161,25,1);
+  background: linear-gradient(176.08deg, rgba(255,184,25,1) 0%, rgba(255,161,25,1) 100%);
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  box-shadow: 2px 2px 28px rgba(150, 138, 138, 0.8);
+  }
+
+
+
+/*   to make ajusts in especific parts
+
+border-top-right-radius: 0;
+border-bottom-right-radius: 0;
+*/
+.promise {
+    margin-right: 330px;
+    text-align: center;
+    color: #999;
+}
+
+.newsletter p {
+  font-size: 25px;
+  color: #0541A2;
+}
+
+.newsletter {
+  margin-top: -75px;
+}
+
+
+/* Footer */
+
+footer {
+height: 100%;
+width: 100%;
+background-color: #023DB0;
+justify-content: center;
+}
+
+.list-unstyled a {
+  font-family: "Source Sans Pro" Helvetica sans-serif;
+  font-weight: 400;
+  text-transform: uppercase;
+  list-style: none;
+  color: #fff !important;
+}
+
+#btn-footer  {
+  padding: 15px 20px;
+  text-align: center;
+  border-radius:  30px;
+  height: 50px;
+  font-weight: 600;
+  color: black !important;
+  box-sizing: border-box;
+  border:  rgba(255,255,255,0.2);
+  background-color: rgba(255,161,25,1);
+  background: linear-gradient(176.08deg, rgba(255,184,25,1) 0%, rgba(255,161,25,1) 100%);
+  box-shadow: 2px 2px 28px rgba(150, 138, 138, 0.8);
+  }
+
+h5 {
+  padding-top: 20px;
+  color: #fff;
+  font-family: "Source Sans Pro" Helvetica sans-serif;
+  font-size: 17px;
+}
+
+.footer-logo {
+padding-top: 20px;
+}
+.footer li  {
+  font-size: 14px;
+  line-height: 2.0em;
+}
+
+.footer-copyright  {
+  color: #fff;
+}
+
+.cp-color a {
+  color: white;
 }
