--- a/css/css-style.css
+++ b/css/css-style.css
@@ -1,11 +1,488 @@
 
 
 .navbar{
- background-color: blue !important;
- width: auto;
- height: 112px;
+  background-color: #023DB0 !important;
+  box-shadow: 0px -5px 20px #09378E; width: auto;
+  height: 112px;
 }
 
-.navbar-brand{
-margin-left: 140px;
+.navbar-nav > li{
+  margin-left:10px;
+  margin-right:10px;
+}
+
+.navbar-nav .nav-item a {
+  color: white !important;
+}
+
+.navbar .dropdown-menu a {
+  color: black !important
+}
+
+li {
+}
+
+.form-control {
+   border-radius: .90rem;
+   border: none;
+   height: 30px;
+}
+
+.nav-iten  .nav-link a {
+  text-decoration: none;
+}
+/* Drop Down Menu*/
+
+
+
+.dropdown-menu.columns-2 {
+	min-width: 350px;
+}
+
+.dropdown-menu li a {
+	padding: 5px 15px;
+	font-weight: 300;
+
+}
+.multi-column-dropdown {
+  list-style: none;
+  margin: none;
+  padding: 3px;
+}
+.multi-column-dropdown li a {
+	display: block;
+	clear: both;
+	white-space: pre;
+}
+.multi-column-dropdown li a:hover {
+	text-decoration: none;
+	color: #023DB0;
+  font-weight: 600;
+}
+
+#navbarDropdownMenuLink{
+  color: white;
+}
+
+@media (max-width: 767px) {
+ .dropdown-menu.multi-column {
+   min-width: 240px !important;
+   overflow-x: hidden;
+ }
+}
+
+
+
+
+.jumbotron {
+    display: flex;
+    align-items: center;
+    background-image: url('/Users/Senna/Desktop/warehouse-bootstrap4-master/img/hero.png');
+    background-size: cover;
+    background-position: center;
+    top: auto;
+    color: #ffffff;
+    height: 500px;
+}
+
+
+
+h1 {
+  font-size: 76px;
+  font-family: "Source Sans Pro", Helvetica, sans-serif;
+  font-weight: 600;
+  text-transform: uppercase;
+   color: #fff;
+}
+
+h2 {
+	height: 40px;
+	width: 191px;
+	color: #0541A2;
+	font-family: "Source Sans Pro";
+	font-size: 40px;
+	font-weight: 900;
+	line-height: 50px;
+}
+
+
+
+h3 {
+	height: 19px;
+	width: 120px;
+	color: #4A4746;
+	font-family: "Source Sans Pro";
+	font-size: 19px;
+	line-height: 19px;
+	text-align: center;
+  margin-top: 10px;
+  white-space: nowrap
+}
+
+
+h4 {
+	height: 19px;
+	width: 120px;
+	color: #4A4746;
+	font-family: "Source Sans Pro";
+	font-size: 19px;
+	line-height: 19px;
+	text-align: center;
+  margin-top: 10px;
+}
+
+  p {
+  height: 44px;
+  width: 372px;
+  color: #FFF;
+  font-family: "Source Sans Pro", Helvetica, sans-serif;
+  font-size: 35px;
+  line-height: 44px;
+}
+
+
+
+ #jumbo-btn {
+  border-radius: 30px;
+	height: 42px;
+	width: 141.5px;
+	background: linear-gradient(152.88deg, #42A9FF 0%, #1FBFFF 100%);
+	box-shadow: 0 1px 4px 0 rgba(0,0,0,0.53);
+  color: rgba(255,255,255, 0.9);
+  font-size: 18px;
+  text-align: center:
+}
+
+#login-btn {
+ border-radius: 30px;
+ height: 42px;
+ width: 141.5px;
+ background: linear-gradient(152.88deg, #42A9FF 0%, #1FBFFF 100%);
+ box-shadow: 0 1px 4px 0 rgba(0,0,0,0.53);
+ color: rgba(255,255,255, 0.9);
+ font-size: 16px;
+}
+
+
+#btn-nav {
+  border-radius: 30px;
+  font-weight: 600;
+  color: black;
+  box-sizing: border-box;
+  height: 42px;
+  width: 142px;
+  border: 0.5px solid rgba(255,255,255,0.2);
+  background-color: rgba(255,161,25,1);
+  background: linear-gradient(176.08deg, rgba(255,184,25,1) 0%, rgba(255,161,25,1) 100%);
+}
+
+
+#cart-btn{
+  margin-left: 15px;
+  border-radius: 30px;
+  height: 42px;
+  width: 42px;
+  background: linear-gradient(152.88deg, #42A9FF 0%, #1FBFFF 100%);
+  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.53);
+  color: rgba(255,255,255, 0.9);
+}
+
+#categories {
+  margin-left: 50px;
+}
+
+#categories-td {
+left: 90px;
+}
+.cart-icon {
+  margin-top:  10px;
+  margin-left: 7px;
+
+  height: 60%;
+  width: 60%;
+}
+
+button:hover {
+ color: hsla(0, 0%, 0%, 0.3)!important;
+}
+
+.btn:hover {
+ color: hsla(0, 0%, 0%, 0.3)!important;
+}
+
+.card-title{
+  text-decoration: none !important;
+}
+.card {
+  border:0px;
+  justify-itens: space-between;
+  margin: 3px;
+}
+
+.card:hover{
+  border-radius:  15px;
+  box-shadow: 2px 2px 28px grey;
+  list-style: none;
+  text-decoration: none;
+
+}
+
+.btn-link {
+  padding-top: 1px;
+}
+/* todays deals slide horizontal */
+
+.td-deals h3 {
+  margin-left: 0px,
+}
+
+
+.scrolling-wrapper-flexbox {
+  margin-left: 240px;
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+}
+
+
+.card {
+    flex: 0 0 auto;
+  }
+
+
+  .scrolling-wrapper {
+  webkit-overflow-scrolling: touch;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+
+/* Recently Viwed h2 */
+.Recently-Viewed {
+margin-left: 150px;
+}
+
+
+/* Subscribe newsletter bar */
+
+.newsletter {
+    padding: 0px 0;
+    text-align: center;
+}
+
+
+.input-group {
+    margin: 20px auto;
+    width: 100%;
+}
+
+input.btn.btn-lg,
+input.btn.btn-lg:focus {
+    border-radius:  30px;
+    box-shadow: 2px 2px 28px grey;
+    outline: none;
+    width: 333px 66%;
+    height: 50px;
+    border-top-right-radius:   0;
+    border-bottom-right-radius: 0;
+}
+
+
+
+#btn-nav-newsletter {
+  margin-right: 50px;
+  border-radius:  30px;
+  width: 100px 33%;
+  height: 50px;
+  font-weight: 600;
+  color: black;
+  box-sizing: border-box;
+  border: 0.5px solid rgba(255,255,255,0.2);
+  background-color: rgba(255,161,25,1);
+  background: linear-gradient(176.08deg, rgba(255,184,25,1) 0%, rgba(255,161,25,1) 100%);
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  box-shadow: 2px 2px 28px rgba(150, 138, 138, 0.8);
+  }
+
+
+
+/*   to make ajusts in especific parts
+
+border-top-right-radius: 0;
+border-bottom-right-radius: 0;
+*/
+.promise {
+    margin-right: 330px;
+    text-align: center;
+    color: #999;
+}
+
+.newsletter p {
+  font-size: 25px;
+  color: #0541A2;
+}
+
+.newsletter {
+  margin-top: -75px;
+}
+
+
+/* Footer */
+
+footer {
+height: 100%;
+width: 100%;
+background-color: #023DB0;
+justify-content: center;
+}
+
+.list-unstyled a {
+  font-family: "Source Sans Pro" Helvetica sans-serif;
+  font-weight: 400;
+  text-transform: uppercase;
+  list-style: none;
+  color: #fff !important;
+}
+
+#btn-footer  {
+  padding: 15px 20px;
+  text-align: center;
+  border-radius:  30px;
+  height: 50px;
+  font-weight: 600;
+  color: black !important;
+  box-sizing: border-box;
+  border:  rgba(255,255,255,0.2);
+  background-color: rgba(255,161,25,1);
+  background: linear-gradient(176.08deg, rgba(255,184,25,1) 0%, rgba(255,161,25,1) 100%);
+  box-shadow: 2px 2px 28px rgba(150, 138, 138, 0.8);
+  }
+
+h5 {
+  padding-top: 20px;
+  color: #fff;
+  font-family: "Source Sans Pro" Helvetica sans-serif;
+  font-size: 17px;
+}
+
+.footer-logo {
+padding-top: 20px;
+}
+.footer li  {
+  font-size: 14px;
+  line-height: 2.0em;
+}
+
+.footer-copyright  {
+  color: #fff;
+}
+
+.cp-color a {
+  color: white;
+}
+
+/* Living room h1 page */
+.main-categories {
+height: 76px;
+width: 416px;
+color: #0541A2;
+font-family: "Source Sans Pro";
+font-size: 76px;
+font-weight: 700;
+line-height: 76px;
+white-space: nowrap;
+}
+
+.types-products {
+
+}
+
+.breadcrumb {
+padding-left: 140px;
+}
+
+/* tag and filter tags */
+
+#tag-btn {
+  border-radius: 30px;
+  padding: 3px 7px;
+}
+
+.filter {
+
+  background-color: white;
+}
+
+
+ .accordion {
+   list-style: none;
+}
+
+#headingOne {
+  height: 50px;
+  font-style: "Source Sans Pro" Helvetica ;
+  font-weight: 700;
+}
+
+#filter-titles {
+  height: 50px;
+  font-style: "Source Sans Pro" Helvetica ;
+  font-weight: 700;
+}
+
+
+
+/* retangle bar */
+.band {
+  width:  auto;
+  height: 40px;
+  background-color: #c8c8c8;
+  padding: 2px 0px;
+  padding-left: 30px;
+  border-radius: 5px
+}
+
+
+.content-area {
+   padding-right: 0;
+   padding-left: 0;
+   margin-left: auto;
+ }
+
+ .product-itens {
+
+   grid-column-gap: 15px;
+}
+
+.img-responsive {
+   height: 105px;
+}
+
+/* principal products */
+
+.products-container {
+  margin-top: 15px;
+  margin-left: 0px;
+
+}
+
+.img-responsive:hover {
+  border-radius:  15px;
+  box-shadow: 2px 2px 28px grey;
+}
+
+
+
+.img-responsive {
+    height: auto;
+    width:  auto;
+}
+
+
+
+.Recently-Viewed {
+   margin-bottom: 8px;
 }
